--- a/.htaccess
+++ b/.htaccess
@@ -8,5 +8,5 @@ RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-f
 
-RewriteRule ^(.*)$ index.php?$1 [L,QSA]
+RewriteRule ^(.*)$ public/index.php?$1 [L,QSA]
 
