Mise en place de la connexion + test.

--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "symfony/var-dumper": "^5.4"
     },
     "require": {
-        "twig/twig": "^3.0"
+        "twig/twig": "^3.0",
+      "ext-pdo": "*"
     }
 }
